--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   path: ^1.9.1
   image_picker: ^1.0.7
   gal: ^2.3.1
+  flutter_slidable: ^3.0.0
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_test:
