--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^2.32.0
-  firebase_auth: ^4.17.5
+  firebase_auth: ^4.16.0
   firebase_database: ^10.1.0
   flutter_bloc: ^9.0.0
   cloud_firestore: ^4.17.5
@@ -50,6 +50,11 @@ dependencies:
   gal: ^2.3.1
   flutter_slidable: ^3.0.0
   video_player: ^2.7.0
+  dio: ^5.4.0
+  flutter_riverpod: ^2.4.0
+  json_annotation: ^4.8.0
+  shared_preferences: ^2.5.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +66,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner: ^2.1.7
-  auto_route_generator: any
+  build_runner: ^2.4.14
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
