--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   json_annotation: ^4.8.0
   shared_preferences: ^2.5.3
   intl: ^0.19.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
