--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   shared_preferences: ^2.5.3
   intl: ^0.19.0
   flutter_spinkit: ^5.2.1
-  better_player: ^0.0.83
+  chewie: ^1.7.4
 
 dev_dependencies:
   flutter_test:
